feat: refactor: add profile data && refactor code :money_with_wings:
